--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,11 @@
-# Tell GitHub to ignore native Android and iOS code for language stats
+# Ignore all native and platform-specific code
 android/** linguist-vendored
 ios/** linguist-vendored
 macos/** linguist-vendored
 windows/** linguist-vendored
 linux/** linguist-vendored
+web/** linguist-vendored
 
-# Explicitly tell GitHub to count Dart
+# Force GitHub to treat Dart as the main language
 lib/** linguist-language=Dart
+
