--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
