--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.2.5
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.2
+
 
 
 
@@ -44,6 +49,8 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
