Update .gitignore to exclude additional build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,11 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-
 build/
 windows/flutter/ephemeral/
+*.pdb
+*.dll
+*.exe
+*.apk
+
 
