--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="daily_done"
+        android:label="DailyDone"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
